# jb

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.tasks/: tk-geap.json  tk-jk7v.json  tk-mq64.json  tk-yy6n.json
ai/: DECISIONS.md  DESIGN.md  STATUS.md
ai/review/: 2026-02-22-full-review.md  2026-02-22-v0.0.14-delta-review.md
crates/job-cli/: Cargo.toml
crates/job-cli/src/: client.rs  main.rs
crates/job-cli/src/commands/: clean.rs  list.rs  logs.rs  mod.rs  retry.rs  run.rs  skills.rs  status.rs  stop.rs  wait.rs
crates/job-core/: Cargo.toml
crates/job-core/src/: db.rs  ipc.rs  job.rs  lib.rs  paths.rs  project.rs
crates/job-daemon/: Cargo.toml
crates/job-daemon/src/: main.rs  server.rs  spawner.rs  state.rs
skills/: SKILL.md  skill.md
src/: client.rs  main.rs
src/commands/: clean.rs  list.rs  logs.rs  mod.rs  retry.rs  run.rs  skill.rs  status.rs  stop.rs  wait.rs
src/core/: db.rs  error.rs  ipc.rs  job.rs  mod.rs  paths.rs  project.rs
src/daemon/: mod.rs  server.rs  spawner.rs  state.rs
