[package]
name = "jb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Background job manager for AI agents"

[[bin]]
name = "jb"
path = "src/main.rs"

[dependencies]
jb-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }
