[package]
name = "jb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for jb background job manager"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
ulid.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs = "6"
