[package]
name = "job-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jobd"
path = "src/main.rs"

[dependencies]
job-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
