[package]
name = "jbd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon for jb background job manager"

[[bin]]
name = "jbd"
path = "src/main.rs"

[dependencies]
jb-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
